[project]
name = "xash"
version = "0.1.0"
description = "Data Science and Data Analysis basic tools"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xash = "xash:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
